Fix map overflowing to the sidebar

--- a/home/styles.css
+++ b/home/styles.css
@@ -21,6 +21,7 @@ nav.navbar {
 img.map {
   grid-area: map;
   height: 100%;
+  max-width: 100%;
   min-width: 0;
   min-height: 0;
   justify-self: end;
